Nav Section Code

--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
     <link rel="stylesheet" href="style/responsive.css" />
   </head>
   <body>
-    
+    <header>
+      <nav>
+        <div class="nav-logo">
+          <h3>G3 Architects</h3>
+        </div>
+
+        <div class="nav-menu">
+          <input type="checkbox" id="click" />
+          <label for="click" class="menu-btn"
+            ><i class="fas fa-bars"></i>
+          </label>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Login</a></li>
+          </ul>
+        </div>
+      </nav>
+      
+    </header>
   </body>
 </html>
