--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
           </ul>
         </div>
       </nav>
-      
+      <div id="banner-container">
+        <div class="banner-contant">
+          <h2>
+            Brand New <br />
+            Group of Architects
+          </h2>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button>Explore More</button>
+        </div>
+        <img src="images/banner.png" alt="">
+      </div>
     </header>
   </body>
 </html>
