--- a/index.html
+++ b/index.html
@@ -47,14 +47,36 @@
             Group of Architects
           </h2>
           <p>
+            Innovative architects specializing in sustainable, stunning designs
+            that seamlessly blend functionality and aesthetics, transforming
+            spaces into inspiring, modern environments that elevate everyday
+            living and work experiences.
+          </p>
+          <button>Explore More</button>
+        </div>
+        <img src="images/banner.png" alt="" />
+      </div>
+    </header>
+    <main>
+      <!-- Quick List Section Code Start Here -->
+      <section id="quick-list-container">
+        <div class="quick-list-images">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="quick-list-text">
+          <h2><span>Quick list</span> of Our <span>Features</span></h2>
+          <p>
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
           </p>
           <button>Explore More</button>
         </div>
-        <img src="images/banner.png" alt="">
-      </div>
-    </header>
+      </section>
+      <!-- Quick List Section Code End Here -->
+    </main>
   </body>
 </html>
