--- a/index.html
+++ b/index.html
@@ -77,6 +77,60 @@
         </div>
       </section>
       <!-- Quick List Section Code End Here -->
+      <!-- Future Section Code Start Here -->
+      <section id="features-container">
+        <div class="features-text-container">
+          <h2>Features you will love & enjoy</h2>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered.
+          </p>
+
+          <div class="features-singel-div">
+            <h3>Dexktop & Mobile Version</h3>
+            <p>
+              Innovative architects specializing in sustainable, stunning
+              designs that blend functionality and aesthetics, transforming
+              spaces into inspiring.
+            </p>
+          </div>
+
+          <div class="features-singel-div">
+            <h3>Drag & Drop Builder</h3>
+            <p>
+              Innovative architects specializing in sustainable, stunning
+              designs that blend functionality and aesthetics, transforming
+              spaces into inspiring.
+            </p>
+          </div>
+
+          <div class="features-singel-div">
+            <h3>Awesome Modern Design</h3>
+            <p>
+              Innovative architects specializing in sustainable, stunning
+              designs that blend functionality and aesthetics, transforming
+              spaces into inspiring.
+            </p>
+          </div>
+
+          <div class="features-singel-div">
+            <h3>Super Easy to Edit</h3>
+            <p>
+              Innovative architects specializing in sustainable, stunning
+              designs that blend functionality and aesthetics, transforming
+              spaces into inspiring.
+            </p>
+          </div>
+        </div>
+        <div class="features-images-container">
+          <img src="images/architect.png" alt="" />
+          <button>
+            <span>10+Year</span> <br />
+            Experience
+          </button>
+        </div>
+      </section>
+      <!-- Future Section Code End Here -->
     </main>
   </body>
 </html>
