--- a/index.html
+++ b/index.html
@@ -86,40 +86,42 @@
             the majority have suffered.
           </p>
 
-          <div class="features-singel-div">
-            <h3>Dexktop & Mobile Version</h3>
-            <p>
-              Innovative architects specializing in sustainable, stunning
-              designs that blend functionality and aesthetics, transforming
-              spaces into inspiring.
-            </p>
-          </div>
+          <div class="features-single-div-container">
+            <div class="features-singel-div">
+              <h3>Dexktop & Mobile Version</h3>
+              <p>
+                Innovative architects specializing in sustainable, stunning
+                designs that blend functionality and aesthetics, transforming
+                spaces into inspiring.
+              </p>
+            </div>
 
-          <div class="features-singel-div">
-            <h3>Drag & Drop Builder</h3>
-            <p>
-              Innovative architects specializing in sustainable, stunning
-              designs that blend functionality and aesthetics, transforming
-              spaces into inspiring.
-            </p>
-          </div>
+            <div class="features-singel-div">
+              <h3>Drag & Drop Builder</h3>
+              <p>
+                Innovative architects specializing in sustainable, stunning
+                designs that blend functionality and aesthetics, transforming
+                spaces into inspiring.
+              </p>
+            </div>
 
-          <div class="features-singel-div">
-            <h3>Awesome Modern Design</h3>
-            <p>
-              Innovative architects specializing in sustainable, stunning
-              designs that blend functionality and aesthetics, transforming
-              spaces into inspiring.
-            </p>
-          </div>
+            <div class="features-singel-div">
+              <h3>Awesome Modern Design</h3>
+              <p>
+                Innovative architects specializing in sustainable, stunning
+                designs that blend functionality and aesthetics, transforming
+                spaces into inspiring.
+              </p>
+            </div>
 
-          <div class="features-singel-div">
-            <h3>Super Easy to Edit</h3>
-            <p>
-              Innovative architects specializing in sustainable, stunning
-              designs that blend functionality and aesthetics, transforming
-              spaces into inspiring.
-            </p>
+            <div class="features-singel-div">
+              <h3>Super Easy to Edit</h3>
+              <p>
+                Innovative architects specializing in sustainable, stunning
+                designs that blend functionality and aesthetics, transforming
+                spaces into inspiring.
+              </p>
+            </div>
           </div>
         </div>
         <div class="features-images-container">
