Some Facts Section Code

--- a/index.html
+++ b/index.html
@@ -133,6 +133,43 @@
         </div>
       </section>
       <!-- Future Section Code End Here -->
+      <!-- Some Facts Section Code Start Here -->
+      <section id="some-facts-container">
+        <div class="some-facts-title">
+          <h2>Some Facts</h2>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+
+        <div class="some-facts-card-container">
+          <div class="some-facts-cards">
+            <img src="images/icons/ribon.png" alt="" />
+            <h3>54</h3>
+            <p>Awards Winnings</p>
+          </div>
+
+          <div class="some-facts-cards">
+            <img src="images/icons/projects.png" alt="" />
+            <h3>1454</h3>
+            <p>Project Finished</p>
+          </div>
+
+          <div class="some-facts-cards">
+            <img src="images/icons/customers.png" alt="" />
+            <h3>590</h3>
+            <p>Clients Worked</p>
+          </div>
+
+          <div class="some-facts-cards">
+            <img src="images/icons/email.png" alt="" />
+            <h3>22578</h3>
+            <p>Email Send</p>
+          </div>
+        </div>
+      </section>
+      <!-- Some Facts Section Code End Here -->
     </main>
   </body>
 </html>
