Sponspors Section Code

--- a/index.html
+++ b/index.html
@@ -170,6 +170,21 @@
         </div>
       </section>
       <!-- Some Facts Section Code End Here -->
+       <!-- Our Sponspors Section Code Start Here -->
+        <section id="sponspors-container">
+          <div class="sponspors-title-div">
+            <h2>Our Sponspors</h2>
+            <p>Our sponsor, a leader in innovative solutions, supports our mission to transform architectural design. Their commitment to excellence and sustainability drives us to create exceptional, modern spaces that inspire and elevate the way we live and work.</p>
+          </div>
+          <div class="sponspors-logo-section">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+          </div>
+        </section>
+       <!-- Our Sponspors Section Code End Here -->
     </main>
   </body>
 </html>
