Footer Section Code

--- a/index.html
+++ b/index.html
@@ -186,5 +186,8 @@
         </section>
        <!-- Our Sponspors Section Code End Here -->
     </main>
+    <footer>
+      <p>All rights reserved copyright &copy; 2024 startup landing page design</p>
+    </footer>
   </body>
 </html>
